# doris-cli

./: .asf.yaml  .gitignore  Cargo.toml  README.md  start-testing.sh
.github/workflows/: release-npm.yml
config/: products.toml
npm/: build-packages.cjs
npm/doriscli/: README.md  package.json  platforms.js
src/: error.rs  main.rs  product.rs
src/cli/: auth.rs  mod.rs  profile.rs  root.rs  sql.rs  tablet.rs
src/commands/: auth.rs  mod.rs  sql.rs  use_env.rs
src/commands/profile/: diff.rs  fetch.rs  full.rs  history.rs  list.rs  mod.rs  summary.rs
src/commands/tablet/: detail.rs  mod.rs  overview.rs
src/config/: environment.rs  mod.rs  store.rs
src/connection/: http.rs  mod.rs  mysql.rs  socks5_forwarder.rs
src/models/: load.rs  mod.rs  profile.rs  sql.rs  tablet.rs
src/output/: csv.rs  format.rs  json.rs  mod.rs  table.rs
src/parser/: fragment_parser.rs  mod.rs  operator_parser.rs  profile_parser.rs  section_parser.rs  value_parser.rs
tests/e2e/: README.md  cluster.env.example  data.sh  lib.sh  suite_auth.sh  suite_cli.sh  suite_profile.sh  suite_sql.sh  suite_tablet.sh
tests/e2e/fixtures/: .gitkeep  sample_profile.txt
