# Standalone crate (no shared workspace) — will move to its own repo.
# The single-package [workspace] table only opts into the MSRV-aware resolver
# so deps resolve to versions compatible with the installed rustc.
[workspace]
resolver = "3"

[package]
name = "doriscli"
version = "0.1.0"
edition = "2021"
description = "Doris CLI — SQL, profiles, and tablet analysis against a Doris kernel"

[[bin]]
name = "doriscli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
time = { version = "0.3", features = ["parsing"] }
mysql_async = "0.34"
reqwest = { version = "0.12", features = ["json", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1.10"
once_cell = "1.19"
comfy-table = "7"
dirs = "5"
thiserror = "2"
anyhow = "1"
is-terminal = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
openssl = { version = "0.10", features = ["vendored"] }
tokio-socks = "0.5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tiny_http = "0.12"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
